gcc/testsuite/algol68/compile/error-mode-stropping-13.a68
# { dg-options "-fstropping=upper" }  #
BEGIN SHORT INT j;
      j := "joo" { dg-error "CHAR.*SHORT INT" }
END
